...
        }
      });
    }

    final body = _buildCatchButton(viewModel);
    return Scaffold(
      appBar: TitleBar(context, 'Catch the button!'),
      body: Column(
        children: [
          Padding(
            padding: const EdgeInsets.all(16.0),
            child: Text(
              'Score: ${gameState.clickCounter}',
...
      ),
    );
  }

  Widget _buildCatchButton(GameScreenViewModel viewModel) {
    return Semantics(
      label: 'catch_button',
      child: SizedBox(
        width: GameScreen.buttonSize,
        height: GameScreen.buttonSize,
        child: ElevatedButton(
          onPressed: viewModel.signalCatch,
          style: ElevatedButton.styleFrom(
...
